--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AI-powered outfit recommendation with virtual try-on" />
-    <title>AI Outfit Recommender</title>
+    <title>FashionGenie</title>
   </head>
   <body>
     <div id="root"></div>
